--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@kuus/apps-beta",
+  "name": "@kuus/gatsby-starter",
   "description": "Example Gatsby, and Netlify CMS project",
-  "version": "1.1.3",
+  "version": "0.0.1",
   "author": "kuus",
   "license": "MIT",
   "scripts": {
@@ -18,9 +18,10 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@kuus/gatsby-plugin-i18n": "file:../../packages/gatsby-plugin-i18n",
+    "@kuus/gatsby-plugin-i18n": "0.0.3",
     "@mdx-js/mdx": "^2.0.0-next.8",
     "@mdx-js/react": "^2.0.0-next.8",
+    "@types/styled-components": "^5.1.7",
     "babel-plugin-styled-components": "^1.12.0",
     "concurrently": "^6.0.0",
     "gatsby": "^3.0.1",
@@ -34,16 +35,22 @@
     "gatsby-plugin-sharp": "^3.0.0",
     "gatsby-plugin-styled-components": "^4.0.0",
     "gatsby-plugin-typescript": "^3.0.0",
+    "gatsby-remark-autolink-headers": "^3.0.0",
     "gatsby-remark-copy-linked-files": "^3.0.0",
+    "gatsby-remark-image-attributes": "^0.2.8",
     "gatsby-remark-images": "^4.0.0",
     "gatsby-source-filesystem": "^3.0.0",
     "gatsby-transformer-remark": "^3.0.0",
     "gatsby-transformer-sharp": "^3.0.0",
+    "hast-util-from-dom": "^3.0.0",
+    "jsdom": "^16.4.0",
     "nanoid": "^3.1.20",
     "netlify-cms-app": "^2.14.26",
     "netlify-cms-proxy-server": "^1.3.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "styled-components": "^5.2.1"
+    "remark-image-attributes": "^0.2.1",
+    "styled-components": "^5.2.1",
+    "unist-util-visit": "^2.0.3"
   }
 }
