--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "concurrently": "^6.0.0",
     "gatsby": "^3.0.1",
+    "gatsby-cli": "^3.0.0",
     "gatsby-plugin-graphql-codegen": "^2.7.1",
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-mdx": "^2.0.0",
