--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@kuus/gatsby-plugin-i18n": "0.0.3",
+    "@kuus/gatsby-plugin-i18n": "0.0.4",
     "@mdx-js/mdx": "^2.0.0-next.8",
     "@mdx-js/react": "^2.0.0-next.8",
     "@types/styled-components": "^5.1.7",
     "babel-plugin-styled-components": "^1.12.0",
     "concurrently": "^6.0.0",
     "gatsby": "^3.0.1",
-    "gatsby-plugin-graphql-codegen": "^2.7.1",
+    "gatsby-cli": "^3.0.0",
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-mdx": "^2.0.0",
     "gatsby-plugin-netlify": "^3.0.0",
@@ -34,6 +34,7 @@
     "gatsby-plugin-root-import": "^2.0.6",
     "gatsby-plugin-sharp": "^3.0.0",
     "gatsby-plugin-styled-components": "^4.0.0",
+    "gatsby-plugin-typegen": "^2.2.4",
     "gatsby-plugin-typescript": "^3.0.0",
     "gatsby-remark-autolink-headers": "^3.0.0",
     "gatsby-remark-copy-linked-files": "^3.0.0",
