--- a/package.json
+++ b/package.json
@@ -23,18 +23,17 @@
     "@kuus/gatsby-plugin-i18n": "0.1.5",
     "@mdx-js/mdx": "^2.0.0-next.8",
     "@mdx-js/react": "^2.0.0-next.8",
-    "@types/styled-components": "^5.1.7",
+    "@types/styled-components": "^5.1.9",
     "babel-plugin-styled-components": "^1.12.0",
     "concurrently": "^6.0.0",
-    "gatsby": "^3.0.1",
+    "gatsby": "^3.0.4",
     "gatsby-cli": "^3.0.0",
-    "gatsby-plugin-image": "^1.0.0",
-    "gatsby-plugin-mdx": "^2.0.0",
-    "gatsby-plugin-netlify": "^3.0.0",
-    "gatsby-plugin-netlify-cms": "^5.0.0",
+    "gatsby-plugin-image": "^1.0.1",
+    "gatsby-plugin-mdx": "^2.2.0-next.0",
+    "gatsby-plugin-netlify": "^3.0.1",
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-root-import": "^2.0.6",
-    "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-plugin-sharp": "^3.0.1",
     "gatsby-plugin-styled-components": "^4.0.0",
     "gatsby-plugin-typegen": "^2.2.4",
     "gatsby-plugin-typescript": "^3.0.0",
@@ -46,9 +45,9 @@
     "gatsby-transformer-remark": "^3.0.0",
     "gatsby-transformer-sharp": "^3.0.0",
     "hast-util-from-dom": "^3.0.0",
-    "jsdom": "^16.4.0",
-    "nanoid": "^3.1.20",
-    "netlify-cms-app": "^2.14.26",
+    "jsdom": "^16.5.1",
+    "nanoid": "^3.1.22",
+    "netlify-cms-app": "^2.14.29",
     "netlify-cms-proxy-server": "^1.3.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
