--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/styled-components": "^5.1.9",
     "babel-plugin-styled-components": "^1.12.0",
     "concurrently": "^6.0.0",
-    "gatsby": "^3.0.4",
+    "gatsby": "^3.2.0-next.0",
     "gatsby-cli": "^3.0.0",
     "gatsby-plugin-image": "^1.0.1",
     "gatsby-plugin-mdx": "^2.2.0-next.0",
