--- a/package.json
+++ b/package.json
@@ -17,33 +17,35 @@
     "kill": "killall -9 node"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
+    "netlify-cms-media-library-cloudinary": "^1.3.10",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@kuus/gatsby-plugin-i18n": "0.2.7",
+    "@kuus/gatsby-plugin-i18n": "^0.2.8",
     "@mdx-js/mdx": "^2.0.0-next.8",
     "@mdx-js/react": "^2.0.0-next.8",
     "@types/styled-components": "^5.1.9",
     "babel-plugin-styled-components": "^1.12.0",
     "concurrently": "^6.0.0",
-    "gatsby": "^3.2.0-next.0",
-    "gatsby-cli": "^3.0.0",
-    "gatsby-plugin-image": "^1.0.1",
+    "gatsby": "^3.1.0",
+    "gatsby-cli": "^3.1.0",
+    "gatsby-plugin-image": "^1.1.0",
     "gatsby-plugin-mdx": "^2.2.0-next.0",
-    "gatsby-plugin-netlify": "^3.0.1",
-    "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-netlify": "^3.1.0",
+    "gatsby-plugin-react-helmet": "^4.1.0",
     "gatsby-plugin-root-import": "^2.0.6",
-    "gatsby-plugin-sharp": "^3.0.1",
-    "gatsby-plugin-styled-components": "^4.0.0",
+    "gatsby-plugin-sharp": "^3.1.0",
+    "gatsby-plugin-styled-components": "^4.1.0",
     "gatsby-plugin-typegen": "^2.2.4",
-    "gatsby-plugin-typescript": "^3.0.0",
-    "gatsby-remark-autolink-headers": "^3.0.0",
-    "gatsby-remark-copy-linked-files": "^3.0.0",
+    "gatsby-plugin-typescript": "^3.1.0",
+    "gatsby-remark-autolink-headers": "^3.1.0",
+    "gatsby-remark-copy-linked-files": "^3.1.0",
     "gatsby-remark-image-attributes": "^0.2.8",
-    "gatsby-remark-images": "^4.0.0",
-    "gatsby-source-filesystem": "^3.0.0",
-    "gatsby-transformer-remark": "^3.0.0",
-    "gatsby-transformer-sharp": "^3.0.0",
+    "gatsby-remark-images": "^4.1.0",
+    "gatsby-source-filesystem": "^3.1.0",
+    "gatsby-transformer-remark": "^3.1.0",
+    "gatsby-transformer-sharp": "^3.1.0",
     "hast-util-from-dom": "^3.0.0",
     "jsdom": "^16.5.1",
     "nanoid": "^3.1.22",
