--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
+    "gatsby-plugin-sitemap": "^3.1.0",
     "netlify-cms-media-library-cloudinary": "^1.3.10",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "@kuus/gatsby-plugin-i18n": "^0.2.8",
+    "@kuus/gatsby-plugin-i18n": "^0.3.0",
     "@mdx-js/mdx": "^2.0.0-next.8",
     "@mdx-js/react": "^2.0.0-next.8",
     "@types/styled-components": "^5.1.9",
