--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,5 @@
     "target": "esnext"
   },
   "exclude": ["node_modules"],
-  "include": ["**/*.ts", "**/*.tsx"]
+  "include": ["**/*.ts", "**/*.tsx", "../gatsby-plugin-i18n/src/components/I18nSwitch.tsx"]
 }
