--- a/package.json
+++ b/package.json
@@ -16,13 +16,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "kill": "killall -9 node"
   },
-  "dependencies": {
-    "dotenv": "^8.2.0",
-    "gatsby-plugin-sitemap": "^3.1.0",
-    "gatsby-remark-images-anywhere": "^1.3.1",
-    "netlify-cms-media-library-cloudinary": "^1.3.10",
-    "react-helmet": "^6.1.0"
-  },
   "devDependencies": {
     "@kuus/gatsby-plugin-i18n": "^0.5.1",
     "@mdx-js/mdx": "^2.0.0-next.8",
@@ -30,6 +23,7 @@
     "@types/styled-components": "^5.1.9",
     "babel-plugin-styled-components": "^1.12.0",
     "concurrently": "^6.0.0",
+    "dotenv": "^8.2.0",
     "gatsby": "^3.1.0",
     "gatsby-cli": "^3.1.0",
     "gatsby-plugin-image": "^1.1.0",
@@ -38,21 +32,26 @@
     "gatsby-plugin-react-helmet": "^4.1.0",
     "gatsby-plugin-root-import": "^2.0.6",
     "gatsby-plugin-sharp": "^3.1.0",
+    "gatsby-plugin-sitemap": "^3.1.0",
     "gatsby-plugin-styled-components": "^4.1.0",
     "gatsby-plugin-typegen": "^2.2.4",
     "gatsby-plugin-typescript": "^3.1.0",
     "gatsby-remark-autolink-headers": "^3.1.0",
     "gatsby-remark-copy-linked-files": "^3.1.0",
     "gatsby-remark-image-attributes": "^0.2.8",
+    "gatsby-remark-images-anywhere": "^1.3.1",
     "gatsby-source-filesystem": "^3.1.0",
     "gatsby-transformer-sharp": "^3.1.0",
     "hast-util-from-dom": "^3.0.0",
     "jsdom": "^16.5.1",
     "nanoid": "^3.1.22",
     "netlify-cms-app": "^2.14.29",
+    "netlify-cms-media-library-cloudinary": "^1.3.10",
     "netlify-cms-proxy-server": "^1.3.11",
+    "netlify-identity-widget": "^1.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "remark-image-attributes": "^0.2.1",
     "styled-components": "^5.2.1",
     "unist-util-visit": "^2.0.3"
