--- a/plugins/gatsby-netlify-cms/package.json
+++ b/plugins/gatsby-netlify-cms/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "netlify-cms-app": "^2.14.29",
     "netlify-cms-media-library-cloudinary": "^1.3.10",
-    "netlify-identity-widget": "^1.9.1"
+    "netlify-identity-widget": "^1.9.1",
+    "ts-deepmerge": "^1.0.7"
   }
 }
