--- a/package.json
+++ b/package.json
@@ -17,44 +17,44 @@
     "kill": "killall -9 node"
   },
   "devDependencies": {
-    "@kuus/gatsby-plugin-i18n": "^0.5.3",
+    "@kuus/gatsby-plugin-i18n": "^0.6.1",
     "@mdx-js/mdx": "^2.0.0-next.9",
     "@mdx-js/react": "^2.0.0-next.9",
-    "@types/styled-components": "^5.1.9",
+    "@types/styled-components": "^5.1.10",
     "babel-plugin-styled-components": "^1.12.0",
-    "concurrently": "^6.0.0",
-    "dotenv": "^8.2.0",
-    "gatsby": "^3.1.2",
-    "gatsby-cli": "^3.1.0",
-    "gatsby-plugin-image": "^1.1.2",
-    "gatsby-plugin-mdx": "^2.2.0-next.0",
-    "gatsby-plugin-netlify": "^3.1.0",
-    "gatsby-plugin-react-helmet": "^4.1.0",
+    "concurrently": "^6.2.0",
+    "dotenv": "^10.0.0",
+    "gatsby": "^3.7.1",
+    "gatsby-cli": "^3.7.1",
+    "gatsby-plugin-image": "^1.7.1",
+    "gatsby-plugin-mdx": "^2.x.x",
+    "gatsby-plugin-netlify": "^3.7.1",
+    "gatsby-plugin-react-helmet": "^4.7.1",
     "gatsby-plugin-root-import": "^2.0.6",
-    "gatsby-plugin-sharp": "^3.1.2",
-    "gatsby-plugin-sitemap": "^3.1.0",
-    "gatsby-plugin-styled-components": "^4.1.0",
+    "gatsby-plugin-sharp": "^3.7.1",
+    "gatsby-plugin-sitemap": "^4.3.1",
+    "gatsby-plugin-styled-components": "^4.7.1",
     "gatsby-plugin-typegen": "^2.2.4",
-    "gatsby-plugin-typescript": "^3.1.0",
-    "gatsby-remark-autolink-headers": "^3.1.0",
-    "gatsby-remark-copy-linked-files": "^3.1.0",
+    "gatsby-plugin-typescript": "^3.7.1",
+    "gatsby-remark-autolink-headers": "^4.4.1",
+    "gatsby-remark-copy-linked-files": "^4.4.1",
     "gatsby-remark-image-attributes": "^0.2.8",
     "gatsby-remark-images-anywhere": "^1.3.1",
-    "gatsby-source-filesystem": "^3.1.0",
-    "gatsby-transformer-sharp": "^3.1.0",
-    "hast-util-from-dom": "^3.0.0",
-    "jsdom": "^16.5.1",
-    "nanoid": "^3.1.22",
-    "netlify-cms-app": "^2.14.32",
+    "gatsby-source-filesystem": "^3.7.1",
+    "gatsby-transformer-sharp": "^3.7.1",
+    "hast-util-from-dom": "^4.0.0",
+    "jsdom": "^16.6.0",
+    "nanoid": "^3.1.23",
+    "netlify-cms-app": "^2.15.19",
     "netlify-cms-media-library-cloudinary": "^1.3.10",
-    "netlify-cms-proxy-server": "^1.3.11",
+    "netlify-cms-proxy-server": "^1.3.18",
     "netlify-identity-widget": "^1.9.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "remark-image-attributes": "^0.2.1",
-    "styled-components": "^5.2.1",
-    "ts-deepmerge": "^1.0.7",
-    "unist-util-visit": "^2.0.3"
+    "styled-components": "^5.3.0",
+    "ts-deepmerge": "^1.0.8",
+    "unist-util-visit": "^3.1.0"
   }
 }
