--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
     "clean": "npx gatsby clean",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "kill": "killall -9 node"
+    "kill": "killall -9 node",
+    "postinstall": "npm link @kuus/gatsby-plugin-i18n"
   },
   "devDependencies": {
     "@kuus/gatsby-plugin-i18n": "^0.6.1",
-    "@mdx-js/mdx": "^2.0.0-next.9",
-    "@mdx-js/react": "^2.0.0-next.9",
+    "@mdx-js/mdx": "^1.x.x",
+    "@mdx-js/react": "^1.x.x",
     "@types/styled-components": "^5.1.10",
     "babel-plugin-styled-components": "^1.12.0",
     "concurrently": "^6.2.0",
     "dotenv": "^10.0.0",
     "gatsby": "^3.7.1",
     "gatsby-cli": "^3.7.1",
+    "gatsby-plugin-compile-es6-packages": "^2.1.0",
     "gatsby-plugin-image": "^1.7.1",
     "gatsby-plugin-mdx": "^2.x.x",
     "gatsby-plugin-netlify": "^3.7.1",
